fixing overflow slider

--- a/css/my-slider.css
+++ b/css/my-slider.css
@@ -1,3 +1,6 @@
+.my-slider,.testimoniasl{
+  overflow-x: hidden;
+}
 .swiper-container {
     width: 100%;
     height: 100%;
